# RSS-Dumper

./: LICENSE  MANIFEST.in  README.md  __version__.py  pyproject.toml  requirements.txt  rssarchiver_core.py  rssdumper.py  rssuploader.py  setup.cfg
.github/workflows/: publish-pypi.yml
utils/: config.py  delay.py  dump_lock.py  exceptions.py  ia_checker.py  patch.py  session.py  util.py
