[metadata]
name = rss-dumper
version = 1.6.2
description = Full archival tool for RSS feeds with image downloading and Internet Archive support.
long_description = file: README.md
long_description_content_type = text/markdown
author = Ironics Side Projects
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    requests
    feedparser
    warcio
    Pillow
    internetarchive
    rich

[options.packages.find]
where = .
